<resources>
    <string name="app_name">Quotes App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sample_quote">We spend so much of our lives not saying the things we wanna say, the things we should say.</string>
    <string name="sample_author">Michael Schofield</string>
    <string name="title_quotes">Quotes</string>
    <string name="menu_title_add_quote">Add Quote</string>
    <string name="menu_title_empty">" "</string>
    <string name="menu_title_quotes">Quotes</string>
    <string name="menu_title_profile">Profile</string>
    <string name="title_add_quote">Add New Quote</string>

    <string name="hint_write_your_quote">New quote</string>
    <string name="hint_new_quote_author">Author</string>
    <string name="text_add_new_quote_btn">Add</string>
    <string name="text_quotes">QUOTES</string>
    <string name="text_welcome_login">Welcome to Quotick</string>
    <string name="text_login">Sign in to continue</string>
    <string name="hint_email">Your Email</string>
    <string name="hint_password">Password</string>
</resources>
