<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/welcomeTextLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_welcome_text"
            android:fontFamily="@font/tthoves_bold"
            android:text="@string/text_welcome_login"
            android:textColor="?attr/colorOnBackground"
            android:textSize="@dimen/text_size_welcome_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/loginText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_login_text"
            android:fontFamily="@font/tthoves_regular"
            android:text="@string/text_login"
            android:textColor="?attr/colorSecondary"
            android:textSize="@dimen/text_size_login_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcomeTextLogin" />


        <!--            Email       -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailLoginInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start_email_login"
            android:layout_marginTop="@dimen/margin_top_email_login"
            android:layout_marginEnd="@dimen/margin_start_email_login"
            android:textColorHint="?attr/colorInactive"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="?attr/colorSecondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailLoginEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="@dimen/padding_drawable_login_input"
                android:fontFamily="@font/tthoves_regular"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:textColor="?attr/colorOnBackground" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--            Password       -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLoginInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_password_login"
            android:textColorHint="?attr/colorInactive"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="?attr/colorSecondary"
            app:layout_constraintEnd_toEndOf="@id/emailLoginInputLayout"
            app:layout_constraintStart_toStartOf="@id/emailLoginInputLayout"
            app:layout_constraintTop_toBottomOf="@id/emailLoginInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordLoginEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="@dimen/padding_drawable_login_input"
                android:fontFamily="@font/tthoves_regular"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:textColor="?attr/colorOnBackground" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>