<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.mmk.domain.model.Quote" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.addquote.AddNewQuoteFragment">

        <TextView
            android:id="@+id/addQuoteTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_title_quote"
            android:fontFamily="@font/tthoves_bold"
            android:text="@string/title_add_quote"
            android:textColor="@color/colorDarkBlack"
            android:textSize="@dimen/text_size_title_quote"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addQuoteTitle">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!--            Quote-->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/newQuoteInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:maxHeight="@dimen/max_height_new_quote"
                    android:layout_marginStart="@dimen/margin_add_quote_layout"
                    android:layout_marginTop="@dimen/margin_top_add_quote_layout"
                    android:layout_marginEnd="@dimen/margin_add_quote_layout"
                    android:layout_marginBottom="@dimen/margin_add_quote_layout"
                    android:scrollbars="vertical"
                    android:textColorHint="@color/colorSilver"
                    app:boxBackgroundMode="outline"
                    android:scrollbarAlwaysDrawVerticalTrack="true"

                    app:boxStrokeColor="@color/colorAccent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/newQuoteEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapSentences|textMultiLine"

                        android:maxHeight="@dimen/max_height_new_quote"
                        android:fontFamily="@font/tthoves_regular"
                        android:gravity="start"

                        android:hint="@string/hint_write_your_quote"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/new_quote_text_size" />
                </com.google.android.material.textfield.TextInputLayout>

                <!--            Author-->

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/newQuoteAuthorInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_add_quote_layout"
                    android:textColorHint="@color/colorSilver"
                    app:boxBackgroundMode="outline"
                    app:boxStrokeColor="@color/colorAccent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/newQuoteInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/newQuoteAuthorEditText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/tthoves_regular"
                        android:gravity="start"
                        android:inputType="textCapSentences"

                        android:hint="@string/hint_new_quote_author"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/new_quote_text_size" />
                </com.google.android.material.textfield.TextInputLayout>


                <!--Add Quote Button-->

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/addNewQuoteButton"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_add_new_quote_button"
                    android:fontFamily="@font/tthoves_medium"
                    android:padding="@dimen/padding_add_new_quote_button"
                    android:text="@string/text_add_new_quote_btn"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="@dimen/new_quote_text_size"
                    app:backgroundTint="@color/colorAccent"
                    app:cornerRadius="@dimen/add_quote_button_corner_radius"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/newQuoteAuthorInputLayout"
                    app:rippleColor="@color/colorPrimary">

                </com.google.android.material.button.MaterialButton>

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="@id/addNewQuoteButton"
                    app:layout_constraintEnd_toEndOf="@id/addNewQuoteButton"
                    app:layout_constraintTop_toTopOf="@id/addNewQuoteButton"
                    app:layout_constraintBottom_toBottomOf="@id/addNewQuoteButton"
                    android:layout_height="wrap_content"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>